--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../src/css/output.css" rel="stylesheet" />
+    <link href="./src/css/output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
       >
         <!-- logo -->
         <a href="" class="z-[1]">
-          <img src="./img/Group.png" />
+          <img src="./src/img/Group.png" />
         </a>
         <!-- Menu desktop -->
         <nav class="sm:hidden">
@@ -79,13 +79,13 @@
         <!-- Actions -->
         <div class="flex gap-[30px] items-center md:hidden">
           <a href="" class="flex gap-1 items-center">
-            <img src="./img/user.png" />
+            <img src="./src/img/user.png" />
             <span class="font-medium text-[15px] leading-[22px] text-white">
               Account
             </span>
           </a>
           <a href="" class="flex gap-1 items-center">
-            <img src="./img/icon.png" />
+            <img src="./src/img/icon.png" />
 
             <span class="font-medium text-[15px] leading-[22px] text-white">
               Cart
@@ -122,7 +122,7 @@
 </div>
           </div>
           <div>
-            <img  src="./img/Saly-10.png" alt="img"/>
+            <img  src="./src/img/Saly-10.png" alt="img"/>
           </div>
         </div>
        </section>
@@ -218,7 +218,7 @@
              <!-- Tab item -->
         <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740] w-auto">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_1.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_1.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">Artificial Intelligence</span>
@@ -241,7 +241,7 @@
         </div>
         <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_2.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_2.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">UX/UI Designing</span>
@@ -264,7 +264,7 @@
         </div>
          <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_3.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_3.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">UX/UI Designing</span>
@@ -287,7 +287,7 @@
           </div>
                <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_4.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_4.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">Web Development</span>
@@ -310,7 +310,7 @@
           </div>
            <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_5.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_5.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">Web Development</span>
@@ -333,7 +333,7 @@
           </div>
            <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_6.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_6.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">Digital Marketing</span>
@@ -356,7 +356,7 @@
           </div>
            <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_7.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_7.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">Digital Marketing</span>
@@ -379,7 +379,7 @@
           </div>
            <div class="tab-content rounded-xl shadow-[0px_0px_9px_0px_#99999740]">
      <div class="rounded-xl overflow-hidden">
-      <img class="h-auto w-full max-w-full" src="./img/tab_8.jpg" alt="img">
+      <img class="h-auto w-full max-w-full" src="./src/img/tab_8.jpg" alt="img">
      </div>
           <div class="p-4">
 <span class="text-[#666768] py-2 px-4 bg-[#EAEAEA] rounded-lg">UX/UI Designing</span>
@@ -502,7 +502,7 @@
               <div class="grid grid-cols-2 items-center gap-[100px] lg:gap-10 sm:grid-cols-1">
                 
                   <div class="sm:order-2">
-                    <img class="lg:max-w-full lg:w-full lg:h-auto" src="./img/s_4_1.png"/>
+                    <img class="lg:max-w-full lg:w-full lg:h-auto" src="./src/img/s_4_1.png"/>
                   </div>
                   <div class="max-w-[550px]">
                     <h3 class="text-2xl leading-normal font-medium mt-2">Best Platform to grow</h3>
@@ -522,7 +522,7 @@
                    <a href="#" class=" sm:w-full sm:flex sm:justify-center py-[9px] px-[22px] bg-blue-600 border rounded-xl text-white font-medium border-white hover:bg-blue-800 mt-7 flex max-w-fit">Read more</a>
                   </div>
                 <div class="sm:order-2">
-                    <img class="lg:max-w-full lg:w-full lg:h-auto" src="./img/S_4_2.png"/>
+                    <img class="lg:max-w-full lg:w-full lg:h-auto" src="./src/img/S_4_2.png"/>
                   </div>
             </div>
             </div>
@@ -538,7 +538,7 @@
                 <!-- Card item -->
                 <div class="rounded-xl shadow-[0px_0px_9px_0px_#99999740] bg-white">
                   <div class="rounded-xl overflow-hidden ">
-                  <img class="max-w-full w-full h-auto" src="./img/s_7_1.png"/>
+                  <img class="max-w-full w-full h-auto" src="./src/img/s_7_1.png"/>
                 </div>
                 <div class="py-4 px-5">
 <div class="flex items-center gap-[5px] text-gray-500">
@@ -568,7 +568,7 @@
                 </div>
                  <div class="rounded-xl shadow-[0px_0px_9px_0px_#99999740] bg-white">
                   <div class="rounded-xl overflow-hidden ">
-                  <img class="max-w-full w-full h-auto" src="./img/s_7_2.png"/>
+                  <img class="max-w-full w-full h-auto" src="./src/img/s_7_2.png"/>
                 </div>
                 <div class="py-4 px-5">
 <div class="flex items-center gap-[5px] text-gray-500">
@@ -598,7 +598,7 @@
                 </div>
                  <div class="rounded-xl shadow-[0px_0px_9px_0px_#99999740] bg-white md:col-span-2 sm:col-span-1">
                   <div class="rounded-xl overflow-hidden ">
-                  <img class="max-w-full w-full h-auto" src="./img/s_7_3.png"/>
+                  <img class="max-w-full w-full h-auto" src="./src/img/s_7_3.png"/>
                 </div>
                 <div class="py-4 px-5">
 <div class="flex items-center gap-[5px] text-gray-500">
@@ -631,8 +631,8 @@
              <!-- Section 8 -->
               <section class="py-10">
                 <div class="grid grid-cols-2 max-w-[1060px] mx-auto px-5 items-center gap-[96px] sm:grid-cols-1">
-                  <div class="order-2">
-                    <img class="max-w-full w-full h-auto" src="./img/fon_s_8.png" alt="">
+                  <div class="sm:order-2">
+                    <img class="max-w-full w-full h-auto" src="./src/img/fon_s_8.png" alt="">
                   </div>
                   <div class="sm:order-1">
                     <h4 class="text-[#5228B6] font-medium text-3xl mb-[5px]" >Subscribe to our newsletter</h4>
@@ -723,6 +723,6 @@
               </div>
             </footer>
  
-    <script src="./js/script.js"></script>
+    <script src="./src/js/script.js"></script>
   </body>
 </html>
