--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </span>
           </a>
           <a href="" class="flex gap-1 items-center">
-            <img src="./src/img/icon.png" />
+            <img src="./src/img/Icon.png" />
 
             <span class="font-medium text-[15px] leading-[22px] text-white">
               Cart
